fix with overflow

--- a/style.css
+++ b/style.css
@@ -200,10 +200,12 @@ p{
 
 .enter{
     width: 75%;
+    padding-left: 1rem;
 }
 
 .contatta{
     width: 25%;
+    padding-left: 1rem;
 }
 
 .numero{
@@ -279,6 +281,7 @@ section.sponsor{
     width: calc(100vw / 3);
     height: calc(100vw / 3);
     border: 1px black solid;
+    overflow-y: auto;
 }
 
 div.square{
@@ -349,7 +352,7 @@ div.square img{
     background-color: rgb(180, 208, 231)
 }
 
-.blue{
+.blu{
     background-color: rgb(13,36,129);
 }
 
@@ -366,17 +369,17 @@ div.square img{
 }
 
 .padding{
-    padding: 4rem;
+    padding: 3rem;
     width: 20rem;
 }
 
 .unico{
-    margin-left: 4rem;
+    margin-left: 3rem;
 }
 
 .membri{
-    padding-top: 2rem;
-    padding-left: 4rem;
+    padding-top: 1rem;
+    padding-left: 3rem;
     padding-right: 1rem;
     font-size: 1.2rem;
 }
